ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/CIBIL_Details__c.object-meta.xml
<CustomObject>
    <label>CIBIL Details</label>
    <nameField>
        <displayFormat>CIBIL - {000}</displayFormat>
        <label>CIBIL Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIBIL Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>