ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>This field represents the M-D relation with Applicant object.</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>CIBIL_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>