ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Cibil_Decision__c.field-meta.xml
<CustomField>
    <fullName>Cibil_Decision__c</fullName>
    <description>This field will be used to store the Cibil Decision value coming from cibil api.</description>
    <label>Cibil Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>