ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/CIBIL_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Pull_Date__c</fullName>
    <label>CIBIL Pull Date</label>
    <type>DateTime</type>
</CustomField>