ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/CIBIL_Report_URl__c.field-meta.xml
<CustomField>
    <fullName>CIBIL_Report_URl__c</fullName>
    <description>This field will be used to store the cibil report url that is coming from api response.</description>
    <label>CIBIL Report URl</label>
    <type>Url</type>
</CustomField>