ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/CIC_No__c.field-meta.xml
<CustomField>
    <fullName>CIC_No__c</fullName>
    <description>This field will be used to store the CIC No coming from cibil api.</description>
    <label>CIC No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>