ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/CRIF_Score_Desc__c.field-meta.xml
<CustomField>
    <fullName>CRIF_Score_Desc__c</fullName>
    <description>This field will be used to store the CRIF Score Desc value coming from cibil api.</description>
    <label>CRIF Score Desc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>