ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>This field will be used to store the Current Balance value coming from cibil api.</description>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>