ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>This field will be used to store the entity type coming from cibil api.</description>
    <label>Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>