ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Equifax_Report_URl__c.field-meta.xml
<CustomField>
    <fullName>Equifax_Report_URl__c</fullName>
    <description>This field will be used to store the equifax report url that is coming from cibil api.</description>
    <label>Equifax Report URl</label>
    <type>Url</type>
</CustomField>