ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/HighCredit_Or_SanctionedAmount__c.field-meta.xml
<CustomField>
    <fullName>HighCredit_Or_SanctionedAmount__c</fullName>
    <description>This field will be used to store the HighCredit Or SanctionedAmount value coming from cibil api.</description>
    <label>HighCredit Or SanctionedAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>