ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/L2flag__c.field-meta.xml
<CustomField>
    <fullName>L2flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if CIBIL is created/updated in L2</description>
    <label>L2flag</label>
    <type>Checkbox</type>
</CustomField>