ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Month_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Month_Overdue__c</fullName>
    <description>This field will be used to store the Month Overdue value coming from cibil api.</description>
    <label>Month Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>