ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/NoOfEnLtSixMon__c.field-meta.xml
<CustomField>
    <fullName>NoOfEnLtSixMon__c</fullName>
    <description>This field will be used to store the NoOfEnLtSixMon value coming from cibil api.</description>
    <label>NoOfEnLtSixMon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>