ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Oldest_Date__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Date__c</fullName>
    <description>This field will be used to store the eOldest Date value coming from cibil api.</description>
    <label>Oldest Date</label>
    <type>DateTime</type>
</CustomField>