ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Other_Loan_AD__c.field-meta.xml
<CustomField>
    <fullName>Other_Loan_AD__c</fullName>
    <label>Other Loan AD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>