ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Other_Loan_PD__c.field-meta.xml
<CustomField>
    <fullName>Other_Loan_PD__c</fullName>
    <label>Other Loan PD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>