ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Overdue_Account__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Account__c</fullName>
    <label>Overdue Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>