ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Recent_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Date__c</fullName>
    <description>This field will be used to store the Recent Date value coming from cibil api.</description>
    <label>Recent Date</label>
    <type>DateTime</type>
</CustomField>