ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>This field will be used to store the score value coming from cibil api.</description>
    <label>Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>