ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/SuitFiledOrWilfulDefault__c.field-meta.xml
<CustomField>
    <fullName>SuitFiledOrWilfulDefault__c</fullName>
    <description>This field will be used to store the SuitFiledOrWilfulDefault  value coming from cibil api.</description>
    <label>SuitFiledOrWilfulDefault</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>