ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/Term_Loan_AD__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_AD__c</fullName>
    <label>Term Loan AD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>