ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/fields/WrittenoffAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>WrittenoffAmountTotal__c</fullName>
    <description>This field will be used to store the WrittenoffAmountTotal value coming from cibil api.</description>
    <label>WrittenoffAmountTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>