ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/recordTypes/CIBIL.recordType-meta.xml
<RecordType>
    <fullName>CIBIL</fullName>
    <active>true</active>
    <label>CIBIL</label>
</RecordType>