ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/recordTypes/Equifax.recordType-meta.xml
<RecordType>
    <fullName>Equifax</fullName>
    <active>true</active>
    <label>Equifax</label>
</RecordType>