ProdIND/ProdPrograms/force-app/main/default/objects/CIBIL_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Score__c</columns>
    <columns>CRIF_Score_Desc__c</columns>
    <columns>CIC_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CIC_No__c</field>
        <operation>equals</operation>
        <value>2023020805403434596</value>
    </filters>
    <label>All</label>
</ListView>